k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-platform
  namespace: content-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: content-platform
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: content-platform
    spec:
      containers:
        - name: content-platform
          image: ghcr.io/lagardeuh/project-cloud-computing:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
